[package]
name = "ccd-pick"
version = "0.1.2"
edition = "2021"
authors = ["Erik Moeller <erik@permacommons.org>"]
license = "CC0-1.0"
description = "A fast, intelligent directory navigation tool with frequency tracking"
homepage = "https://github.com/permacommons/ccd"
repository = "https://github.com/permacommons/ccd"
keywords = ["cli", "directory", "navigation", "cd", "filesystem"]
categories = ["command-line-utilities", "filesystem"]
readme = "README.md"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.29.0"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

[build-dependencies]
